# ai-agent-platform

./: README.md  demo.py  pyproject.toml
common/: models.py
gateway/: dependencies.py  main.py  routes.py  websocket.py
harness/: __init__.py  llm.py  registry.py  runner.py  state.py
harness/tools/: calculator_tool.py  code_tool.py  fetch_tool.py  file_tools.py  math_tool.py  plot_tool.py  shell_tool.py
sandbox/: __init__.py  docker_sandbox.py
sdk/: __init__.py  builder.py  client.py
tests/: conftest.py  test_calculator_tool.py  test_fetch_tool.py  test_file_tools.py  test_gateway.py  test_harness.py  test_integration.py  test_plot_tool.py  test_sandbox.py  test_sdk.py  test_shell_tool.py  test_websocket.py
